[package]
name = "protocol-units"
version = "0.1.0"
edition = "2021"
description = "Protocol Units for the Movement SDK"

[[bin]]
name = "data-availability"
path = "data-availability/src/main.rs"

[[bin]]
name = "host"
path = "zkfp/host/src/main.rs"

[[bin]]
name = "methods"
path = "zkfp/methods/src/main.rs"

[[bin]]
name = "guest"
path = "zkfp/guest/src/main.rs"


[dependencies]
anyhow = "1.0"
risc0-zkvm = { version = "0.20.1",  features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.2.0"
serde = "1.0"

methods = { path = "../methods" }

# Move dependencies. 
move-vm-runtime = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
move-vm-test-utils = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
move-binary-format = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
move-vm-types = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp"}
move-core-types = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
move-compiler = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
move-stdlib = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }