[package]
name = "howzit"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-sdk = { workspace = true }
aptos-types = { workspace = true }
aptos-framework = { workspace = true }
aptos-cached-packages = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
bcs = { workspace = true }


[lints]
workspace = true
