[package]
name = "howzit"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "howzit-bench"
path = "src/bin/howzit-bench.rs"

[dependencies]
aptos-sdk = { workspace = true }
aptos-types = { workspace = true }
aptos-framework = { workspace = true }
aptos-cached-packages = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
bcs = { workspace = true }
godfig = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }


[lints]
workspace = true
