[package]
name = "hsm-demo"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
vaultrs = { workspace = true }
aws-sdk-kms = { workspace = true }
aws-config = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
ed25519 = { workspace = true }
ring-compat = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "pkcs8"] }
google-cloud-kms = { workspace = true }

[lints]
workspace = true
