[package]
name = "sui-block-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sov-rollup-interface = { workspace = true }
sov-mock-da = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
web3 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
# ethers-rs = { workspace = true }