[package]
name = "m2-stf"
version = "0.1.0" 
edition = { workspace = true }
resolver = "2"
authors = { workspace = true }
license = { workspace = true }
homepage = "sovereign.xyz"
publish = false

[dependencies]
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-bank = { workspace = true }
sov-sequencer-registry = { workspace = true }
sov-mock-da = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-stf-runner = { workspace = true }
sov-sequencer = { workspace = true, optional = true }
sov-rollup-interface = { workspace = true }
tracing = "0.1.37"

anyhow = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
jsonrpsee = { workspace = true, features = ["jsonrpsee-types"], optional = true }
borsh = { workspace = true, features = ["rc", "bytes"] }
clap = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
native = [
    "sov-modules-api/native",
    "sov-accounts/native",
    "sov-bank/native",
    "sov-sequencer-registry/native",
    "sov-mock-da/native",
    "sov-modules-stf-blueprint/native",
    "sov-stf-runner/native",
    "jsonrpsee",
    "sov-sequencer",
    "clap",
]