[workspace]
resolver = "2"
members = [
    "eth-settlement",
    "publisher",
    "methods"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Liam Monninger <liam@movementlabs.xyz>"]
homepage = "https://www.movementlabs.xyz"
publish = false
repository = "https://github.com/movemntdev/m2"
rust-version = "1.70"

[workspace.dependencies]
async-trait = { version = "0.1" } 
anyhow = { version = "1" }     # For flexible error handling
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly", features = ["native"] }
sov-mock-da = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", branch = "nightly", features = ["native"] }
tokio = { version = "1", features = ["full"] }
web3 = "0.19.0"
hex = "0.4.3"
serde = "1.0.130"
serde_json = "1.0.68"
methods = { path = "./methods" }

alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
bincode = { version = "1.3" }
bonsai-sdk = { version = "0.6.1" }
bytemuck = { version = "1.14" }
ethers = { version = "2.0" }
log = { version = "0.4" }

# NOTE: Using a git rev temporarily to get an unreleased version of risc0-build.
# Once the referenced commit is in a released version of risc0-build, this will go back to using a version.
risc0-build = { git = "https://github.com/risc0/risc0", rev = "7f731662", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.7" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.7" }
risc0-zkvm = { version = "0.20", default-features = false }
risc0-zkp = { version = "0.20", default-features = false }
# ethers-rs = "0.2.3"
