[package]
name = "eth-settlement"
authors = { workspace = true }
version = "0.1.0"
edition = "2021"
description = "ZK Onchain Groth16 Settlement layer for Ethereum"
publish = false 

[dependencies]
async-trait = { workspace = true } 
anyhow = { workspace = true }     # For flexible error handling
sov-rollup-interface = { workspace = true }
sov-mock-da = { workspace = true }
tokio = { workspace = true }
web3 = "0.19.0"
hex = { workpsace = true } 
serde = { workspace = true } 
serde_json = { workspace = true } 
methods = { path = "./methods" }

alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true}
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
ethers = { workspace = true }
log = { workspace = true }

risc0-build = { workspace = true }
risc0-build-ethereum = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
risc0-zkp = { workspace = true }
# ethers-rs = "0.2.3"
