[package]
name = "movement-rest"
description = "additional movement rest api endpoints"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
poem = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

aptos-api = { workspace = true }

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
