[package]
name = "movement-rest"
description = "additional movement rest api endpoints"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
poem = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

aptos-types = { workspace = true }
aptos-api = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
