[package]
name = "sov-ethereum"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

version = { workspace = true }
readme = "README.md"
resolver = "2"
publish = false

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client", "server"] }
sov-rollup-interface = { path = "../../rollup-interface", features = [
  "native",
] }

sov-evm = { path = "../../module-system/module-implementations/sov-evm" }
m2-stf = { path = "../../m2/stf", features = ["native"] }
sov-modules-api = { workspace = true }
sov-accounts = { workspace = true }

borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reth-primitives = { workspace = true }
reth-rpc-types = { workspace = true }

ethers = { workspace = true }
tokio = { workspace = true }
schnellru = "0.2.1"

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }

[features]
default = []
local = []
experimental = ["m2-stf/experimental", "sov-evm/experimental", "local"]
native = ["m2-stf/native", "sov-evm/native"]
