[package]
name = "protocol-unit-types"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }


[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }


aptos-types = { workspace = true }
aptos-api = { workspace = true }
aptos-crypto = { workspace = true }


