[package]
name = "zkfp"
version = "0.1.0"
edition = "2021"
description = "Testing environment for Zero Konwledge Fraud Proofs on Movement"

[[bin]]
name = "host"
path = "host/src/main.rs"

[[bin]]
name = "methods"
path = "methods/src/main.rs"

[[bin]]
name = "guest"
path = "methods/guest/src/main.rs"

[dependencies]
anyhow = "1.0"
risc0-zkvm = { version = "0.20.1",  features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.2.0"
serde = "1.0"

methods = { path = "zkfp/methods" }

# Aptos dependencies. 
aptos-vm = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-sdk = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-consensus-types = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-crypto = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-db = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-api-types = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-types = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-storage-interface = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-block-executor = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-vm-types = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-vm-logging = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-language-e2e-tests = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-framework = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-config = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-vm-genesis = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-executor = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-executor-types = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-executor-test-helpers = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
aptos-bitvec = { git = "https://github.com/movementlabsxyz/aptos-core", branch = "zkfp" }
