[package]
name = "sequencer"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
publish = true
description = "Movement Sequencer"
license = "BSD-3-Clause"
repository = "https://github.com/movemntdev/sdk/tree/main/shared-sequencer/sequencer"
readme = "../README.md"

[dependencies]
avalanche-types = { version = "0.1.5", features = ["subnet", "codec_base64"] } # https://crates.io/crates/avalanche-types
base64 = { version = "0.21.7" }
bytes = "1.5.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["cargo", "derive"] } # https://github.com/clap-rs/clap/releases
derivative = "2.2.0"
env_logger = "0.11.2"
http-manager = { version = "0.0.14" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"
log = "0.4.21"
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114" # https://github.com/serde-rs/json/releases
serde_with = { version = "3.6.1", features = ["hex"] }
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tempfile = "3.2.0"

# new deps
anyhow = "1.0"
rocksdb = { version = "0.22.0", features = [
  "snappy",
  "lz4",
  "zstd",
  "zlib",
  "multi-threaded-cf",
], default-features = false }

[dev-dependencies]
random-manager = "0.0.5"
