[package]
name = "move-vm-integration-test-helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }
move-core-types = { workspace = true }
move-compiler = { workspace = true }
move-stdlib = { workspace = true }