[package]
name = "move-vm-ext"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true } 
tempfile = { workspace = true }

# Move dependencies. 
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-binary-format = { workspace = true }
move-vm-types = { workspace = true }
move-compiler = { workspace = true }
move-stdlib = { workspace = true }
move-vm-integration-test-helpers = { workspace = true }