[package]
name = "buildtime"
version = { workspace = true }
edition  = { workspace = true }
license  = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
buildtime-helpers = { workspace = true }
buildtime-macros = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
